tests/fail/no_file.rs
use wgpu_shader_checker::include_wgsl;

fn main() {
    include_wgsl!("./shaders/meowwow.wgsl")
}
